# pSZ

./: CMB_quadrupole.ipynb  README.md  pSZ_calcs_overview.ipynb  pSZ_corr_quadrupole.ipynb  pSZ_sims.ipynb  pyproject.toml
notebooks/: pSZ_calcs_overview.ipynb
notebooks/old/: pSZ_corr_quadrupole.ipynb
pSZ/: __init__.py  pSZ.py  profiles.py  sims.py  utils.py
src/: pSZ.py  profiles.py
